<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.zistory</groupId>
    <artifactId>mybatis-plus-ex</artifactId>
    <version>0.0.1</version>
    <name>mybatis-plus-ex</name>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <lombok.version>1.18.32</lombok.version>
        <taol.version>0.0.1</taol.version>
        <ztream.version>0.0.5</ztream.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.taowater</groupId>
            <artifactId>taol-core</artifactId>
            <version>${taol.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.taowater</groupId>
            <artifactId>ztream</artifactId>
            <version>${ztream.version}</version>
        </dependency>
    </dependencies>
</project>
